# AI-Code-Agent-with-Self-Repair

./: .env.example  .gitignore  AI-Code-Agent-Complete-Project-Plan.md  CodeForge-Execution-Guide.md  DOCUMENTATION.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: benchmark.yml  ci.yml
backend/: pyproject.toml
backend/app/: config.py  dependencies.py
benchmarks/: runner.py
codeforge/: .env.example  README.md  docker-compose.dev.yml
codeforge/backend/: .dockerignore  alembic.ini  pyproject.toml  requirements.txt
codeforge/backend/alembic/: env.py
codeforge/backend/alembic/versions/: 001_init_all_tables.py  002_add_conversations.py  003_add_benchmark_status.py
codeforge/backend/app/: main.py
codeforge/backend/app/agents/: multi_agent.py  planner.py  tool_agent.py
codeforge/backend/app/agents/prompts/: coder.py  reviewer.py
codeforge/backend/app/api/: analytics.py  conversations.py  health.py  history.py  router.py  websocket.py
codeforge/backend/app/db/: repository.py
codeforge/backend/app/llm/: classifier.py
codeforge/backend/app/models/: database.py  schemas.py
codeforge/backend/app/observability/: tracing.py
codeforge/backend/app/sandbox/: executor.py  manager.py
codeforge/backend/app/services/: analytics_service.py  benchmark_service.py  cache.py  conversation_service.py  settings_service.py  task_service.py
codeforge/backend/app/tools/: file_ops.py  registry.py
codeforge/backend/tests/unit/: test_coder.py  test_model_router.py  test_planner.py
docs/: agent-design.md
frontend/: package.json
(+93 files in other folders)
